<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="preferences">

	<PreferenceCategory
		android:title="@string/status">
		
		<CheckBoxPreference
			android:key="active"
			android:title="@string/active"
			android:summaryOn="@string/active_summary_on"
			android:summaryOff="@string/active_summary_off" />
	
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings">
		
			<ListPreference
				android:key="offset_method"
				android:dependency="active"
				android:title="@string/offset_method"
				android:summary="@string/offset_method_summary"
				android:entries="@array/offset_options_text"
				android:entryValues="@array/offset_options_values"
				android:defaultValue="manual" />
				
			<EditTextPreference
				android:key="offset_hours"
				android:dependency="active"
				android:title="@string/offset_hours"
				android:summary="@string/offset_hours_summary"
				android:defaultValue="0" />
				
			<EditTextPreference
				android:key="offset_minutes"
				android:dependency="active"
				android:title="@string/offset_minutes"
				android:summary="@string/offset_minutes_summary"
				android:defaultValue="0" />
				
			<CheckBoxPreference
				android:key="notify"
				android:dependency="active"
				android:title="@string/notify"
				android:summary="@string/notify_summary"
				android:defaultValue="0" />
				
			<CheckBoxPreference
				android:key="cdma"
				android:dependency="active"
				android:title="@string/cdma"
				android:summary="@string/cdma_summary"
				android:defaultValue="0" />
								
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/more">
		
		<Preference
			android:key="help"
			android:title="@string/help" />
	
		<Preference
			android:key="about"
			android:title="@string/about" />
			
	</PreferenceCategory>
</PreferenceScreen>