<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
		<TextView
			style="@style/About.Title"
			android:id="@+id/about_title"
			android:text="@string/app_name" />
			
		<TextView
			style="@style/About.Version"
			android:id="@+id/about_version"
			android:layout_below="@id/about_title"
			android:text="@string/about_version" />
		
		<TextView
			style="@style/About.By"
			android:id="@+id/about_by"
			android:layout_below="@id/about_version"
			android:text="@string/about_by" />
			
		<TextView
			style="@style/About"
			android:id="@+id/about_contact"
			android:layout_below="@id/about_by"
			android:text="@string/about_contact" />
			
		<TextView
			style="@style/About.Blurb"
			android:id="@+id/about_blurb"
			android:layout_below="@id/about_contact"
			android:text="@string/about_blurb" />
		
	</RelativeLayout>
</ScrollView>